# purejxr

./: LICENSE  README.md  pyproject.toml
src/purejxr/: __main__.py  _iotools.py  codestream.py  jxrfile.py
